# RunnerStub

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.prop
app/src/main/cpp/: CMakeLists.txt  starter_sh.c
app/src/main/java/com/shizuku/uninstaller/: Exec.java  ExecActivity.java  ListAdapter.java  MainActivity.java  adapter.java
app/src/main/java/runnerstub/: Config.java  ExecActivity.java  ExecService.java  ExecTileService.java  MainActivity.java
app/src/main/res/drawable/: add.xml  icon.xml  run.xml
app/src/main/res/layout/: activity_main.xml  dialog_edit.xml  dialog_exec.xml  dialog_help.xml  dialog_settings.xml  item_command.xml
app/src/main/res/mipmap-anydpi-v26/: cat.xml  icon.xml
app/src/main/res/values/: colors.xml  styles.xml  values.xml
app/src/main/res/values-night-v31/: styles.xml
app/src/main/res/values-v26/: styles.xml  values.xml
app/src/main/res/values-v31/: colors.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
